--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/header/page-header-title.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/header/page-header-title.component.html
@@ -1,3 +1,3 @@
-<div class="header mbsc-padding">
-    <h2 class="mbsc-align-center">dh | helpdesk</h2>
+<div class="header mbsc-padding navbar-brand">
+    <div class="mbsc-align-center navbar-brand "></div>
 </div>
