--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/app.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/app.component.html
@@ -8,6 +8,7 @@
     <div *requireAuth class="footer">
       <app-footer></app-footer>
     </div>
+    <app-alert></app-alert>
 </mbsc-page>
 <!-- <div class="footer">
     <app-footer></app-footer>
