#64973 - Mobile: Case files (attachments) download. Mail2Ticket html attached files support.

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/app.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/app.component.html
@@ -6,7 +6,7 @@
         <router-outlet></router-outlet>
     </div>
     <div *requireAuth class="footer">
-      <app-footer></app-footer>
+      <app-footer *ngIf="isFooterVisible"></app-footer>
     </div>
     <app-alert></app-alert>
 </mbsc-page>
