--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/case-edit.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/case-edit.component.scss
@@ -3,3 +3,19 @@
         width: 100%;
     }    
 }
+
+mbsc-tab-nav {
+    width: 100%;
+    mbsc-nav-item {
+        &:nth-child(2) {
+            width: 60%;
+            padding-right: 0px;
+            padding-left: 0px;
+        }
+        .ellipsis {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+    }
+}
