--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/app.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/app.component.html
@@ -1,7 +1,4 @@
-<mbsc-page [options]="pageSettings">  
-<!--     <div *requireAuth class="stickyTop">
-        <app-header></app-header>
-    </div> -->
+<mbsc-page [options]="pageSettings" [ngClass]="{'login': rla.isActive} ">  
     <div class="content">
         <router-outlet></router-outlet>
     </div>
@@ -10,8 +7,5 @@
     </div>
     <app-alert></app-alert>
 </mbsc-page>
-<!-- <div class="footer">
-    <app-footer></app-footer>
-</div>
- -->
  <div style="display:none">{{ version }}</div>
+ <a routerLink="/login" routerLinkActive #rla="routerLinkActive" hide></a>
