--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/cases-overview/cases-overview.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/cases-overview/cases-overview.component.html
@@ -4,7 +4,7 @@
                         <div class="mbsc-grid mbsc-grid-sm" >
                                 <div class="mbsc-row" *ngIf="showSearchPanel">
                                         <div class="mbsc-col">
-                                                <mbsc-input type="search" formControlName="freeSearch" icon="fa-search" placeholder="Search"></mbsc-input>
+                                                <mbsc-input type="search" formControlName="freeSearch" icon="fa-search" placeholder="Search" input-style="box"></mbsc-input>
                                         </div>
                                         <div class="mbsc-col-sm-auto">
                                                 <a [ngClass]="{'inactive':isLoading}" (click)="cancelSearch()">Cancel</a>
