--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.html
@@ -1,17 +1,18 @@
+<app-header-title></app-header-title>
 <mbsc-form class="md-login-form">
     <form [formGroup]="loginForm" novalidate (ngSubmit)="onSubmit()">
-        <div class="md-logo"></div>
         <div class="mbsc-form-group-inset">
-            <mbsc-input formControlName="username" [error]="f.username.touched && f.username.dirty && f.username.invalid" [errorMessage]="getError('username')">User</mbsc-input>
-            <mbsc-input formControlName="password" type="password" password-toggle="true" icon="none" icon-align="right" [error]="f.password.touched && f.password.dirty && f.password.invalid" [errorMessage]="getError('password')">Password</mbsc-input>
+            <mbsc-input formControlName="username" [error]="f.username.touched && f.username.dirty && f.username.invalid" [errorMessage]="getError('username')"
+                 input-style="outline" class="margin">User</mbsc-input>
+            <mbsc-input formControlName="password" type="password" password-toggle="true" icon="none"
+                 icon-align="right" [error]="f.password.touched && f.password.dirty && f.password.invalid" [errorMessage]="getError('password')"
+                    input-style="outline" class="margin">Password</mbsc-input>
             <div *ngIf="error" class="alert alert-danger">{{ error }}</div>
         </div>
         <div class="mbsc-form-group-inset mbsc-padding md-load-btn">
-            <mbsc-button block type="submit" [disabled]="loginForm.invalid" [hidden]="isLoading">Login</mbsc-button>
-            <mbsc-button flat block icon="loop2" [hidden]="!isLoading"></mbsc-button> 
+            <mbsc-button flat type="submit" [disabled]="loginForm.invalid" [hidden]="isLoading" class="float-right">Login</mbsc-button>
+            <mbsc-button flat icon="loop2" [hidden]="!isLoading" class="float-right"></mbsc-button> 
         </div>
     </form>    
 </mbsc-form>
-<div class="footer">
-    <p style="text-align:center"><img src="/content/img/dh_solutions_version.png" /></p>
-</div>
+
