--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/shared/components/login/login.component.scss
@@ -1,14 +1,17 @@
-.md-login-form .md-logo {
-    display: inline-block;
-    width: 100%;
-    font-size: 80px;
-    text-align: center;
-    height: 46px;
-    margin: 0 0 30px 0;
-    //color: #1c75bc;
+:host ::ng-deep .mbsc-form {
+        background: transparent;
+    }
+
+mbsc-input {
+    &.margin {
+        ::ng-deep label {
+            margin: 16px;
+        }
+    }
 }
 
-.footer p {
-    margin-top: 0;
-    margin-bottom: 0;
+mbsc-button {
+    ::ng-deep .mbsc-btn {
+        color: white;
+    }
 }
