Fixed date control UI separator Removed angular "disabled" warning

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/date/case-date-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/date/case-date-control.component.html
@@ -1,2 +1,2 @@
-<mbsc-date #date [(ngModel)]="value" [options]="options" [hidden]="options.disabled">{{ field.label }}</mbsc-date>
-<mbsc-input [ngModel]="value | dateTz: 'L'" [hidden]="!options.disabled" disabled>{{ field.label }}</mbsc-input>
+<!-- <mbsc-date #date [(ngModel)]="value" [options]="options" [hidden]="options.disabled">{{ field.label }}</mbsc-date> -->
+<mbsc-input #control [ngModel]="value | dateTz: 'L'" >{{ field.label }}</mbsc-input>
