--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/textbox/case-textbox-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/case-edit/controls/textbox/case-textbox-control.component.html
@@ -1,5 +1,5 @@
 <ng-container [formGroup]="form">
-    <mbsc-input #input [formControlName]="field.name" [disabled]="true">{{ field.label }}</mbsc-input> 
+    <mbsc-input #input [formControlName]="field.name">{{ field.label }}</mbsc-input> 
 <!--
     <label>
         {{field.Label}}
