--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/cases-overview/cases-overview.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/cases-overview/cases-overview.component.html
@@ -24,7 +24,7 @@
 <div class="stickToBottom">
         <mbsc-listview #listview [options]="listviewSettings" [hidden]="isLoading" (onItemTap)="onItemTap($event)" (touchmove)="checkLoad()">
                 <mbsc-listview-item *ngFor="let case of cases; trackBy: trackByFn" >
-                        <div class="ellipsis">{{ (case.columns | getByKey: 'Caption') || '&nbsp;' }}</div>
+                        <div class="row ellipsis">{{ (case.columns | getByKey: 'Caption') || '&nbsp;' }}</div>
                         <div class="secondary">{{ (case.columns | getByKey: 'CaseNumber') || '&nbsp;' }} {{ (case.columns | getByKey: 'RegTime' | dateTz: 'L') || '&nbsp;' }}</div>
                 </mbsc-listview-item>
         </mbsc-listview>
