--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/cases-overview/cases-overview.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/components/cases-overview/cases-overview.component.scss
@@ -7,6 +7,10 @@ div {
 
 mbsc-listview {
     mbsc-listview-item {
+        padding: 11px 16px 11px 16px;
+        .row {
+            margin-bottom: 5px;
+        }
         .secondary {
             font-size: 0.8em;
             opacity: 0.7;
