--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -1740,7 +1740,7 @@
                                                     var priority = Model.case_.Priority_Id.HasValue ? Model.priorities.SingleOrDefault(x => x.Id == Model.case_.Priority_Id) : null;
                                                     if (priority == null)
                                                     {
-                                                        <input type="text" value="" readonly="true" id="priority_Name" />
+                                                        <input type="text" value="" readonly="readonly" id="priority_Name" />
                                                         @Html.HiddenFor(m => Model.case_.Priority_Id, new { @class = "sla-value", data_sla = "" })
                                                     }
                                                     else
