hide footer on case view page comm service added

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
@@ -1,26 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
-/* @import '../../../node_modules/@mobiscroll/angular/dist/css/mobiscroll.min.css'; */
-
-/*.mbsc-ios .mbsc-btn {
-    background-color: #d96326
-}*/
-
-/* .mbsc-ios .mbsc-input {
-    flex-direction: column;
+.hide {
+  display: none;
 }
-
-.mbsc-ios .mbsc-input .mbsc-label {
-    width: auto;
-    max-width: none;
-    font-size: .75em;
-    color: #6d6d6d;
-} */
-
-
-/* .mbsc-ic.icon:before {
-    font-family: "Font Awesome 5 Free" !important; 
-} */
 
 $primary-color: #438eb9;
 $font-header-color: white;
