--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/_layout/app-layout/app-layout.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/_layout/app-layout/app-layout.component.html
@@ -2,7 +2,7 @@
     <div class="content">
         <router-outlet></router-outlet>
     </div>
-    <div *requireAuth class="footer">
+    <div [ngClass]="{'hide':!isFooterVisible, 'footer':true}">
       <app-footer></app-footer>
     </div>
     <app-alert></app-alert>
