--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/_layout/app-layout/app-layout.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/_layout/app-layout/app-layout.component.html
@@ -5,7 +5,7 @@
     <div [ngClass]="{'hide':!isFooterVisible, 'footer':true}">
       <app-footer></app-footer>
     </div>
-    <app-alert></app-alert>
+    <!-- <app-alert></app-alert> -->
 </mbsc-page>
  <div style="display:none">{{ version }}</div>
  
